# REZANOVA-CAS-Cacluator

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  GEMINI.md  README.md  SECURITY.md  package.json  vitest.playground.config.ts
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  math_correctness.yml
.github/workflows/: ci.yml  release-linux.yml
.memory/: INDEX.md  PROTOCOL.md  approvals.md  current-state.md  decisions.md  open-questions.md  world-canon.md
.memory/journal/: 2026-03-02.md  2026-03-03.md  2026-03-04.md  2026-03-05.md  2026-03-06.md  2026-03-07.md  2026-03-09.md  2026-03-10.md  2026-04-03.md  2026-04-04.md  2026-04-05.md  2026-04-07.md  2026-04-08.md  2026-04-09.md  2026-04-10.md  2026-04-11.md  2026-04-14.md  2026-04-24.md  2026-04-25.md  2026-04-26.md  2026-04-28.md  2026-04-30.md  README.md
.memory/research/: PLAN.md  TRACK-ABS3-MANUAL-VERIFICATION-CHECKLIST.md  TRACK-ALG-R3-MANUAL-VERIFICATION-CHECKLIST.md  TRACK-C-P2-MANUAL-VERIFICATION-CHECKLIST.md  TRACK-CALC-AUDIT0-MANUAL-VERIFICATION-CHECKLIST.md  calc-audit0-status.md  sources.md  (+24 more)
e2e/: calc-audit0-smoke.spec.ts  helpers.ts  qa1-smoke.spec.ts
playground/: README.md
src/: App.tsx  AppMain.tsx  AppMain.ui.test.tsx
src-tauri/: Cargo.toml
src-tauri/src/: lib.rs
tools/: generate-labs-catalog.mjs  labs-catalog-core.mjs  validate-labs-catalog.mjs  validate-labs-catalog.test.mjs  validate-memory-protocol.mjs  validate-memory-protocol.test.mjs  validate-pillars.mjs  validate-pillars.test.mjs
(+324 files in other folders)
