[package]
name = "calcwiz_desktop"
version = "0.1.0"
description = "Casio-inspired scientific calculator desktop app"
authors = ["Codex and Ahmed"]
license = "MIT"
repository = "https://github.com/AhmedAlnasser2000/Cacluator"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "calcwiz_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
mathexpr = "0.1.1"
